monitoring/slave/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
      app: prometheus
      prometheus.io/scrape: 'true'
#      prometheus.io/port:   '9090'
spec:
  selector: 
    app: prometheus
  ports:
  - name: "http"
    port: 9090
    protocol: TCP
    targetPort: "http"
