monitoring/slave/prometheus/prometheus-ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/use-regex: "true"  

spec:
  rules:
  - http:
      paths:
      - path: /monitoring/prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 8080
#  rules:
#  - http:
#      paths:
#      - backend:
#          serviceName: prometheus-service
#          servicePort: 8080
